@@ -4,9 +4,9 @@
 # files and put the result in a .par file based on the MJD. Then check
 # that file in to the speclog product.
 #
-# Must be run as observer@sos3, designed for crontab.
+# Must be run as eboss@sdss4-eboss, designed for crontab.
 #
-# Requires ~observer/bin/sjd.py and guidermonfile.pro from idlspec2d.
+# Requires ~eboss/bin/sjd.py and guidermonfile.pro from idlspec2d.
 
 function run_and_test {
     "$@"
@@ -19,17 +19,17 @@ function run_and_test {
 }
 
 # Need to be able to find the ssh agent in order for svn checkins to work.
-export SSH_AUTH_SOCK=/home/observer/sos/control/agent.socket
+export SSH_AUTH_SOCK=/home/eboss/sos/control/agent.socket
 
 # cronjobs need the idlspec2d product
 source /home/sdss3/products/eups/bin/setups.sh
 setup idlspec2d trunk
 
 # for password-less ssh
-export SVN_SSH="ssh -i /home/observer/.ssh/id_dsa-sos"
+export SVN_SSH="ssh -i /home/eboss/.ssh/id_dsa-sos"
 
 export GUIDE_DIR=/data/gcam/
-export MJD=`/home/observer/bin/sjd.py`
+export MJD=`/home/eboss/bin/sjd.py`
 export SVN_MESSAGE="committing guiderMon for $MJD"
 
 # guidermonfile writes the output .par to $SPECLOG_DIR/$MJD
